# pronouncer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/pronouncer/: __init__.py  cli.py  dictionary.py
